RESOLVED FIXED153031
[FTL][Win64] Compile error.
https://bugs.webkit.org/show_bug.cgi?id=153031
Summary [FTL][Win64] Compile error.
peavo
Reported 2016-01-12 12:33:53 PST
The header file dlfcn.h does not exist on Windows.
Attachments
Patch (1.10 KB, patch)
2016-01-12 12:39 PST, peavo
no flags
peavo
Comment 1 2016-01-12 12:39:49 PST
Brent Fulgham
Comment 2 2016-01-12 12:44:46 PST
Comment on attachment 268800 [details] Patch r=me.
peavo
Comment 3 2016-01-12 12:46:38 PST
(In reply to comment #2) > Comment on attachment 268800 [details] > Patch > > r=me. Thanks!
Brent Fulgham
Comment 4 2016-01-12 12:48:14 PST
You know you don't need a review for pure "build fix" things like this, right? You can just land the build fix directly. (Might save you some time).
peavo
Comment 5 2016-01-12 13:07:27 PST
(In reply to comment #4) > You know you don't need a review for pure "build fix" things like this, > right? You can just land the build fix directly. (Might save you some time). Ok, thanks :)
WebKit Commit Bot
Comment 6 2016-01-12 13:34:43 PST
Comment on attachment 268800 [details] Patch Clearing flags on attachment: 268800 Committed r194922: <http://trac.webkit.org/changeset/194922>
WebKit Commit Bot
Comment 7 2016-01-12 13:34:46 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.