[FTL][Win64] Compile error. https://bugs.webkit.org/show_bug.cgi?id=153031

Reviewed by Brent Fulgham.

The header file dlfcn.h does not exist on Windows.

* ftl/FTLLowerDFGToLLVM.cpp:


Canonical link: https://commits.webkit.org/171119@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@194922 268f45cc-cd09-0410-ab3c-d52691b4dbfc